crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__dismember_lowered.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&lowered"
---
{
  "abilities": [
    {
      "kind": "Spell",
      "effect": {
        "type": "Pump",
        "power": {
          "type": "Fixed",
          "value": -5
        },
        "toughness": {
          "type": "Fixed",
          "value": -5
        },
        "target": {
          "type": "Typed",
          "type_filters": [
            "Creature"
          ],
          "controller": null,
          "properties": []
        }
      },
      "cost": null,
      "sub_ability": null,
      "duration": "UntilEndOfTurn",
      "description": "Target creature gets -5/-5 until end of turn.",
      "target_prompt": null,
      "sorcery_speed": false,
      "condition": null,
      "optional_targeting": false,
      "optional": false,
      "forward_result": false
    }
  ],
  "triggers": [],
  "statics": [],
  "replacements": [],
  "extractedKeywords": []
}
