crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__eidolon_of_the_great_revel_ir.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&ir"
---
{
  "items": [
    {
      "PreLoweredTrigger": {
        "mode": "SpellCast",
        "execute": {
          "kind": "Spell",
          "effect": {
            "type": "DealDamage",
            "amount": {
              "type": "Fixed",
              "value": 2
            },
            "target": {
              "type": "TriggeringPlayer"
            }
          },
          "cost": null,
          "sub_ability": null,
          "duration": null,
          "description": null,
          "target_prompt": null,
          "sorcery_speed": false,
          "condition": null,
          "optional_targeting": false,
          "optional": false,
          "forward_result": false
        },
        "valid_card": {
          "type": "Typed",
          "type_filters": [
            "Card"
          ],
          "controller": null,
          "properties": [
            {
              "type": "Cmc",
              "comparator": "LE",
              "value": {
                "type": "Fixed",
                "value": 3
              }
            }
          ]
        },
        "origin": null,
        "destination": null,
        "trigger_zones": [
          "Battlefield"
        ],
        "phase": null,
        "optional": false,
        "damage_kind": "Any",
        "secondary": false,
        "valid_target": null,
        "valid_source": null,
        "description": "Whenever a player casts a spell with mana value 3 or less, ~ deals 2 damage to that player.",
        "constraint": null,
        "condition": null,
        "batched": false
      }
    }
  ],
  "source_text": "Whenever a player casts a spell with mana value 3 or less, this creature deals 2 damage to that player.",
  "card_name": "Eidolon of the Great Revel"
}
