crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__experiment_one_ir.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&ir"
---
{
  "items": [
    {
      "PreLoweredSpell": {
        "kind": "Spell",
        "effect": {
          "type": "Unimplemented",
          "name": "unknown",
          "description": "Evolve"
        },
        "cost": null,
        "sub_ability": null,
        "duration": null,
        "description": "Evolve",
        "target_prompt": null,
        "sorcery_speed": false,
        "condition": null,
        "optional_targeting": false,
        "optional": false,
        "forward_result": false
      }
    },
    {
      "PreLoweredSpell": {
        "kind": "Activated",
        "effect": {
          "type": "Regenerate",
          "target": {
            "type": "ParentTarget"
          }
        },
        "cost": {
          "type": "RemoveCounter",
          "count": 2,
          "counter_type": "+1/+1",
          "target": null
        },
        "sub_ability": null,
        "duration": null,
        "description": "Remove two +1/+1 counters from ~: Regenerate it.",
        "target_prompt": null,
        "sorcery_speed": false,
        "condition": null,
        "optional_targeting": false,
        "optional": false,
        "forward_result": false
      }
    }
  ],
  "source_text": "Evolve (Whenever a creature you control enters, if that creature has greater power or toughness than this creature, put a +1/+1 counter on this creature.)\nRemove two +1/+1 counters from this creature: Regenerate it. (The next time this creature would be destroyed this turn, instead tap it, remove it from combat, and heal all damage on it.)",
  "card_name": "Experiment One"
}
